[package]
name = "rorbcat"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
simple_logger = "5.0"
log = "0.4"
constcat = "0.5.1"

itm = { path = "../../crates/itm" }
collector = { path = "../../crates/collector" }
oflow = { path = "../../crates/oflow" }
