[package]
name = "rorbcat"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
simplelog = { version = "0.12.2", features = ["paris"] }
log = "0.4"
constcat = "0.5.1"
aho-corasick = "1.1.3"
inline_colorization = "0.1.6"
chrono = "0.4.38"

itm = { path = "../../crates/itm" }
collector = { path = "../../crates/collector" }
oflow = { path = "../../crates/oflow" }
