[package]
name = "rorbcat"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
simplelog = { version = "0.12.2", features = ["paris"] }
log = "0.4"
constcat = "0.5.1"
collector = { path = "../../crates/collector" }
itm_processor = { path = "../../crates/itm_processor" }
