[package]
name = "itm_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
inline_colorization = "0.1.6"
chrono = "0.4.38"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
itm = { path = "../../crates/itm" }
collector = { path = "../../crates/collector" }
oflow = { path = "../../crates/oflow" }
